--- a/public/admin_assets/css/theme.css
+++ b/public/admin_assets/css/theme.css
@@ -37944,3 +37944,7 @@ div.code-toolbar > .toolbar > .toolbar-item > span:hover, div.code-toolbar > .to
   padding-bottom: 0;
 }
 
+.fss-1
+{
+  font-size: 1.5rem;
+}
