--- a/public/admin_assets/css/theme.css
+++ b/public/admin_assets/css/theme.css
@@ -36664,8 +36664,8 @@ textarea.form-control-lg {
   width: 100%;
   max-width: 250px;
   padding: 0rem;
-  background-color: #212b36;
-  border-right: 1px solid #212b36;
+  background-color: #fff;
+  border-right: 1px solid #fff;
   transition: margin 0.25s ease-out;
 }
 .navbar-vertical .slimScrollDiv {
